Add missing #include <sys/wait.h>

This is required for WIFEXITED, WEXITSTATUS, WIFSIGNALED,
WTERMSIG. This must have been implicit and nobody noticed, but isn't
with SH4 architecture (Linux, Gentoo, GNU gcc and glibc).

http://bugs.freedesktop.org/show_bug.cgi?id=62220