src/polkitbackend/polkitbackendjsauthority.c
@@ -20,6 +20,7 @@
  */
 
 #include "config.h"
+#include <sys/wait.h>
 #include <errno.h>
 #include <pwd.h>
 #include <grp.h>
